Add StepState record for managing step status